--- a/src/components/LandingPage/style.module.css
+++ b/src/components/LandingPage/style.module.css
@@ -80,3 +80,27 @@ main span{
 }
 
 
+@media screen and (max-width: 800px) {
+    .ldn_pg {
+        display: block;
+        font-size: 80%;
+    }
+
+    .ani_img{
+        height: 90%;
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .content{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+
