--- a/src/components/CurrencyDetails/DetailBar/styles.module.css
+++ b/src/components/CurrencyDetails/DetailBar/styles.module.css
@@ -67,3 +67,14 @@
 .down_trend_price{
     color: var(--loss-clr);
 }
+
+
+@media screen and (max-width : 850px) {
+    .detail_bar{
+        flex-direction: column;
+        width: fit-content;
+        gap: 1.2em;
+        padding: 3em;
+        font-size: 80%;
+    }
+}
