--- a/src/components/LandingPage/style.module.css
+++ b/src/components/LandingPage/style.module.css
@@ -82,17 +82,15 @@ main span{
 
 @media screen and (max-width: 800px) {
     .ldn_pg {
-        display: block;
-        font-size: 80%;
+        justify-content: center;
+        align-items: center;
     }
 
     .ani_img{
-        height: 90%;
-        width: 100vw;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        display: none;
+    }
+
+    .ani_img>:first-child{
     }
 
     .content{
@@ -101,6 +99,7 @@ main span{
         justify-content: center;
         align-items: center;
     }
+
 }
 
 
